--- a/style.css
+++ b/style.css
@@ -1,53 +1,60 @@
 body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
     margin: 0;
-    font-family: Arial, sans-serif;
 }
 
-.weather-app {
-    width: 300px;
-    background-color: #fff;
-    border-radius: 20px;
+.container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    padding: 20px;
+    background-image: url(./aaabeed1-d465-4edf-a9f3-7009d038dd0b.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
 
-.weather-header h1 {
-    margin: 0;
-    font-size: 24px;
+h1 {
+    margin-bottom: 20px;
 }
 
-.weather-header p {
-    margin: 5px 0 20px;
-    color: #888;
-}
-
-.weather-icon img {
-    width: 100px;
-}
-
-.temperature h2 {
-    margin: 10px 0;
-    font-size: 40px;
-}
-
-.weather-details {
+.exchange-box {
     display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
 }
 
-
-.detail-item p {
-    margin: 0;
-    font-size: 14px;
+.exchange-item {
+    margin-bottom: 10px;
 }
 
-.detail-item p:first-child {
-    color: #888;
+input, select, button {
+    padding: 10px;
+    font-size: 16px;
+    margin: 5px;
+    width: 200px;
+}
+
+.exchange-icon {
+    font-size: 2em;
+    margin: 10px;
+}
+
+.exchange-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.exchange-button:hover {
+    background-color: #45a049;
 }
